--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "start": "node index.js",
     "server": "nodemon index.js",
     "migrate": "knex migrate:latest",
+    "seed": "knex seed:run",
+    "rollback": "knex migrate:rollback",
+    "resetdb": "npm run rollback && npm run migrate && npm run seed",
     "test": "cross-env NODE_ENV=testing jest --verbose --runInBand --silent"
   },
   "repository": {
@@ -14,9 +17,12 @@
   },
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "2.8.5",
+    "dotenv": "^16.3.1",
     "express": "4.18.1",
     "helmet": "5.0.2",
+    "jsonwebtoken": "^9.0.1",
     "knex": "2.0.0",
     "sqlite3": "5.0.8"
   },
